--- a/project.json
+++ b/project.json
@@ -1,14 +1,7 @@
 {
   "version": "1.0.0-*",
-  "buildOptions": {
-    "debugType": "portable",
-    "emitEntryPoint": true,
-    "copyToOutput": [
-       "Data/sanqianzi.json"
-    ]
-  },
+
   "dependencies": {
-    "LiteDB.Core": "2.0.4",
     "Microsoft.NETCore.App": {
       "version": "1.1.0",
       "type": "platform"
@@ -21,15 +14,10 @@
     },
     "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
-    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0",
-    "Microsoft.EntityFrameworkCore.Design": {
-      "version": "1.1.0",
-      "type": "build"
-    },
+    "Microsoft.AspNetCore.StaticFiles": "1.0.0",
     "Microsoft.Extensions.Configuration": "1.1.0",
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0",
     "Microsoft.Extensions.Configuration.Json": "1.1.0",
-    "Microsoft.Extensions.Configuration.CommandLine": "1.1.0",
     "Microsoft.IdentityModel.Tokens": "5.1.1",
     "Microsoft.Extensions.Logging": "1.1.0",
     "Microsoft.Extensions.Logging.Console": "1.1.0",
@@ -38,6 +26,7 @@
   },
   
   "tools": {
+    "BundlerMinifier.Core": "2.0.238",
     "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
     "Microsoft.DotNet.Watcher.Tools": "1.0.0-preview2-final"
@@ -50,5 +39,29 @@
         "portable-net45+win8"
       ]
     }
+  },
+
+  "buildOptions": {
+    "emitEntryPoint": true,
+    "preserveCompilationContext": true,
+    "copyToOutput": [
+       "Data/sanqianzi.json"
+    ]
+  },
+
+  "runtimeOptions": {
+    "configProperties": {
+      "System.GC.Server": true
+    }
+  },
+
+  "publishOptions": {
+    "include": [
+      "wwwroot",
+      "Views",
+      "Features/**/*.cshtml",
+      "appsettings.json",
+      "web.config"
+    ]
   }
 }
